# sem2laba2

./: CMakeLists.txt  main.cpp
task1/: Bell.cpp  Bell.h
task2/: OddEvenSeparator.cpp  OddEvenSeparator.h
task3/: Table.cpp  Table.h
task4/: Complex.cpp  Complex.h
task5/: Box.cpp  Box.h  Stock.cpp  Stock.h
