cmake_minimum_required(VERSION 4.0)
project(laba2_2026)

set(CMAKE_CXX_STANDARD 20)

add_executable(laba2_2026 main.cpp
        task1/Bell.cpp
        task1/Bell.h
        task2/OddEvenSeparator.cpp
        task2/OddEvenSeparator.h
        task3/Table.cpp
        task3/Table.h
        task5/Stock.cpp
        task5/Stock.h
        task5/Box.cpp
        task5/Box.h
)
